# cancer-segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
cancer-segmentation/: dataset.py
cats_and_dogs/: constants.py  datasets.py  models.py  train.py  transforms.py
docs/: conf.py  index.rst
tests/: test_version.py
